--- a/Backend/Views/Home/Index.cshtml
+++ b/Backend/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Главная страница";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Добро пожаловать в Центр дистанционного обучения</h1>
+    <p>Для ознакомления с курсами и прохождения тестирований необходимо <a asp-controller="Account" asp-action="Login">войти</a> на сайт.</p>
 </div>
