--- a/Backend/Views/Shared/_Layout.cshtml
+++ b/Backend/Views/Shared/_Layout.cshtml
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - IS_distance_learning</title>
+    <title>@ViewData["Title"] - Центр дистанционного обучения</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css"/>
 </head>
@@ -11,20 +11,21 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">IS_distance_learning</a>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Центр дистанционного обучения</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
+                <ul class="navbar-nav flex-grow-1 justify-content-between">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Мои курсы</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Войти</a>
                     </li>
                 </ul>
+                <a class="nav-link text-dark" asp-controller="Account" asp-action="Register">Регистрация</a>
             </div>
         </div>
     </nav>
@@ -37,7 +38,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2021 - IS_distance_learning - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2021 - Центр дистанционного обучения
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
