login and register models moved to ViewModels folder

--- a/Backend/Views/Account/Login.cshtml
+++ b/Backend/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model IS_distance_learning.Models.LoginModel
+﻿@model IS_distance_learning.ViewModels.LoginModel
 
 @{
     ViewData["Title"] = "Login";
