--- a/Backend/Views/Account/Register.cshtml
+++ b/Backend/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model IS_distance_learning.Models.RegisterModel
+﻿@model IS_distance_learning.ViewModels.RegisterModel
 
 @{
     ViewData["Title"] = "Register";
