added profile page

--- a/Backend/Views/Account/Register.cshtml
+++ b/Backend/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IS_distance_learning.ViewModels.RegisterModel
 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Регистрация";
 }
 
 <h1>Регистрация нового пользователя</h1>
