--- a/Backend/Views/Account/Login.cshtml
+++ b/Backend/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IS_distance_learning.ViewModels.LoginModel
 
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Логин";
 }
 
 <h1>Вход</h1>
@@ -27,10 +27,6 @@
                 </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-controller="Home" asp-action="Index">На главную</a>
 </div>
 
 @section Scripts {
