--- a/Backend/Views/Group/Index.cshtml
+++ b/Backend/Views/Group/Index.cshtml
@@ -1,21 +1,27 @@
-﻿@model IS_distance_learning.Models.GroupModel
+﻿@model List<Group>
 
 @{
     ViewData["Title"] = "Группы";
 }
-
+<div class="col-md-4">
+    <a asp-action="Create" asp-controller="Group" class="btn btn-primary">Добавить новую группу</a>
+</div>
 <table class="table">
-    @foreach (Group g in Model.Groups)
+    @foreach (Group g in Model)
     {
         <tr>
             <td>@g.Name</td>
             <td>@g.Code</td>
             <td>
-                <a asp-action="Update" asp-controller="Group" name="@g.Id" class="btn btn-info">Редактировать</a>
+                <form method="get">
+                    <input name="id" class="hide disabled invisible" type="hidden" value="@g.Id" />
+                    <input type="submit" asp-action="Update" asp-controller="Group" class="btn btn-info" value="Редактировать" />
+                </form>
             </td>
             <td>
                 <form method="post">
-                    <button asp-action="Delete" asp-controller="Group" name="@g.Id" class="btn btn-danger">Удалить</button>
+                    <input name="id" class="hide disabled invisible" type="hidden" value="@g.Id"/>
+                    <input type="submit" asp-action="Delete" asp-controller="Group" class="btn btn-danger" value="Удалить"/>
                 </form>
             </td>
         </tr>
