--- a/Backend/Views/Account/Index.cshtml
+++ b/Backend/Views/Account/Index.cshtml
@@ -24,7 +24,7 @@
             if (Model.RoleId == 3)
             {
                 <div>
-                    <span>@Model.GroupName</span>
+                    <span>@Model.Group.Name</span>
                 </div>
             }
         }
