--- a/Backend/Views/Account/Index.cshtml
+++ b/Backend/Views/Account/Index.cshtml
@@ -1,47 +1,73 @@
-﻿@model IS_distance_learning.Models.Account
+﻿@model IS_distance_learning.ViewModels.AccountModel
+
 @{
-    ViewData["Title"] = User.Identity.Name;
+    ViewData["Title"] = "Аккаунты";
 }
 
-<h1>Профиль</h1>
-
-<hr />
-
-<div class="row">
-    <div class="col-md-4">
-        <div>
-            <span>@Model.LastName</span>
-        </div>
-
-        <div>
-            <span>@Model.Name</span>
-        </div>
-
-        <div>
-            <span>@Model.MiddleName</span>
-        </div>
-        @{
-            if (Model.RoleId == 3)
-            {
-                <div>
-                    <span>@Model?.Group.Name</span>
-                </div>
-            }
-        }
+<div class="d-flex flex-column mb-2">
+    <div class="col-md-4 mb-2">
+        <a class="btn btn-primary mb-2" asp-controller="Account" asp-action="Register">Зарегистрировать нового пользователя</a>
     </div>
-    @{ 
-        if (Model.RoleId == 1)
-        { 
-        <div class="col-md-4">
-            <a class="btn btn-primary" asp-controller="Account" asp-action="Index">Работа с пользователями</a>
-            <a class="btn btn-primary" asp-controller="Group" asp-action="Index">Работа с учебными группами</a>
-            <a class="btn btn-primary" asp-controller="Account" asp-action="Register">Зарегистрировать нового пользователя</a>
+    <form class="form-inline d-flex justify-content-start">
+        <div class="d-flex mr-2">
+            <label class="control-label mr-1">Выберите роль: </label>
+            <select id="role_select" name="RoleId" class="form-control">
+                <option value="0">Все</option>
+                @foreach (Role role in ViewBag.Roles)
+                {
+                    <option value="@role.Id">@role.Name</option>
+                }
+            </select>
         </div>
-        } else if (Model.RoleId == 2)
-        { 
-        <div class="col-md-4">
-            <a class="btn btn-primary" asp-controller="Course" asp-action="Index">Работа с Курсами</a>
+        <div class="hide mr-2" id="group_select">
+            <div class="d-flex">
+                <label class="control-label mr-1">Выберите группу: </label>
+                <select name="GroupId" class="form-control custom-select">
+                    <option value="0">Все</option>
+                    @foreach (Group g in ViewBag.Groups)
+                    {
+                        <option value="@g.Id">@g.Name</option>
+                    }
+                </select>
+            </div>
         </div>
-         }
-    }
+        <input type="submit" class="btn btn-primary" value="Подтвердить" />
+    </form>
 </div>
+<table border="1" bordercolor="#dee2e6" class="table">
+    <tr>
+        <th>Фамилия</th>
+        <th>Имя</th>
+        <th>Отчество</th>
+        <th>Роль</th>
+        <th>Группа</th>
+        <th>Редактировать</th>
+        <th>Удалить</th>
+    </tr>
+    @foreach (Account acc in Model.SelectedAccounts)
+    {
+        <tr>
+            <td>@acc.LastName</td>
+            <td>@acc.Name</td>
+            <td>@acc.MiddleName</td>
+            <td>@acc.Role.Name</td>
+            <td>@acc.Group?.Name</td>
+            <td>
+                <form method="get">
+                    <input name="id" class="hide disabled invisible" type="hidden" value="@acc.Id" />
+                    <input type="submit" asp-action="Update" asp-controller="Account" class="btn btn-info" value="Редактировать" />
+                </form>
+            </td>
+            <td>
+                <form method="post">
+                    <input name="id" class="hide disabled invisible" type="hidden" value="@acc.Id" />
+                    <input type="submit" asp-action="Delete" asp-controller="Account" class="btn btn-danger" value="Удалить" />
+                </form>
+            </td>
+        </tr>
+    }
+</table>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
