--- a/Backend/Views/Account/Register.cshtml
+++ b/Backend/Views/Account/Register.cshtml
@@ -8,58 +8,67 @@
 
 <hr />
 
-<div class="row">
-    <div class="col-md-4">
+<div class="row justify-content-center">
+    <div class="w-100 m-auto">
         <form asp-action="Register">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Login" class="control-label">Логин</label>
-                <input asp-for="Login" class="form-control" />
-                <span asp-validation-for="Login" class="text-danger"></span>
+            <div class="form-row justify-content-start">
+                <div class="form-group w-25 mr-4">
+                    <label asp-for="Login" class="control-label">Логин</label>
+                    <input asp-for="Login" class="form-control" />
+                    <span asp-validation-for="Login" class="text-danger"></span>
+                </div>
+                <div class="form-group w-25">
+                    <label asp-for="LastName" class="control-label">Фамилия</label>
+                    <input asp-for="LastName" class="form-control" />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label">Пароль</label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+            <div class="form-row justify-content-start">
+                <div class="form-group w-25 mr-4">
+                    <label asp-for="Password" class="control-label">Пароль</label>
+                    <input asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form-group w-25">
+                    <label asp-for="Name" class="control-label">Имя</label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword" class="control-label">Подтверждение пароля</label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            <div class="form-row justify-content-start">
+                <div class="form-group w-25 mr-4">
+                    <label asp-for="ConfirmPassword" class="control-label">Подтверждение пароля</label>
+                    <input asp-for="ConfirmPassword" class="form-control" />
+                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                </div>
+                <div class="form-group w-25">
+                    <label asp-for="MiddleName" class="control-label">Отчество</label>
+                    <input asp-for="MiddleName" class="form-control" />
+                    <span asp-validation-for="MiddleName" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label">Имя</label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MiddleName" class="control-label">Отчество</label>
-                <input asp-for="MiddleName" class="form-control" />
-                <span asp-validation-for="MiddleName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label">Фамилия</label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RoleId" class="control-label">Роль</label>
-                <select name="RoleId" id="role_select" asp-for="RoleId">
-                    <option value="1">Администратор</option>
-                    <option value="2">Преподаватель</option>
-                    <option value="3">Студент</option>
-                </select>
-            </div>
-            <div class="form-group hide" id="group_select">
-                <label for="GroupId" class="control-label">Группа</label>
-                <select name="GroupId">
-                    @{ 
-                        foreach(Group g in @ViewBag.Groups)
+            <div class="form-row justify-content-start">
+                <div class="form-group mr-4">
+                    <label asp-for="RoleId" class="control-label">Роль</label>
+                    <select class="form-control" name="RoleId" id="role_select" asp-for="RoleId">
+                        <option value="1">Администратор</option>
+                        <option value="2">Преподаватель</option>
+                        <option value="3">Студент</option>
+                    </select>
+                </div>
+                <div class="form-group hide" id="group_select">
+                    <label for="GroupId" class="control-label">Группа</label>
+                    <select class="form-control" name="GroupId">
+                        <option selected value="@null"></option>
+                        @{
+                            foreach (Group g in @ViewBag.Groups)
                             {
                                 <option value="@g.Id">@g.Name  @g.Code</option>
                             }
-                    }
-                </select>
+                        }
+                    </select>
+                </div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Добавить" class="btn btn-primary" />
