--- a/Backend/Views/Shared/_Layout.cshtml
+++ b/Backend/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             else
                             {
                                 <span class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Account" asp-action="Index">Мой профиль</a>
+                                    <a class="nav-link text-dark" asp-controller="Account" asp-action="Profile">Мой профиль</a>
                                 </span>
                                 <span class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Выйти</a>
