--- a/Backend/Views/Account/Register.cshtml
+++ b/Backend/Views/Account/Register.cshtml
@@ -77,6 +77,10 @@
     </div>
 </div>
 
+<div>
+    <a asp-action="Index">Вернуться к списку пользователей</a>
+</div>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
