refactored courses views

--- a/Backend/Views/Course/DeleteGroups.cshtml
+++ b/Backend/Views/Course/DeleteGroups.cshtml
@@ -19,7 +19,7 @@
             {
                 <div class="form-group">
                     <label for="SelectedGroups" class="control-label">Выберите группы для открепления от курса</label>
-                    <select class="form-control overflow-auto custom-select" name="SelectedGroups" asp-items="@ViewBag.Groups" multiple>
+                    <select class="form-control overflow-auto w-100 custom-select" name="SelectedGroups" asp-items="@ViewBag.Groups" multiple>
                     </select>
                 </div>
                 <div class="form-group">
