--- a/Backend/Views/Course/Create.cshtml
+++ b/Backend/Views/Course/Create.cshtml
@@ -18,8 +18,7 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AccountId" class="control-label"></label>
-                <select asp-for="AccountId" class="form-control" asp-items="ViewBag.AccountId"></select>
+                <input asp-for="AccountId" name="AccountId" value="@User.Claims.ToList()[2].Value" type="hidden" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Добавить курс" class="btn btn-primary" />
