--- a/Backend/Views/Course/Update.cshtml
+++ b/Backend/Views/Course/Update.cshtml
@@ -19,9 +19,7 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AccountId" class="control-label"></label>
-                <select asp-for="AccountId" class="form-control" asp-items="ViewBag.AccountId"></select>
-                <span asp-validation-for="AccountId" class="text-danger"></span>
+                <input asp-for="AccountId" name="AccountId" value="@User.Claims.ToList()[2].Value"  type="hidden" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Сохранить" class="btn btn-primary" />
