--- a/src/Views/Account/Index.cshtml
+++ b/src/Views/Account/Index.cshtml
@@ -55,11 +55,13 @@
             <td>
                 <form method="get">
                     <input name="id" class="hide disabled invisible" type="hidden" value="@acc.Id" />
+                    <input name="roleId" class="hide disabled invisible" type="hidden" value="@acc.Role.Id" />
                     <input type="submit" asp-action="Update" asp-controller="Account" class="btn btn-info" value="Редактировать" />
                 </form>
             </td>
             <td>
                 <form method="post">
+                    <input name="roleId" class="hide disabled invisible" type="hidden" value="@acc.Role.Id" />
                     <input name="id" class="hide disabled invisible" type="hidden" value="@acc.Id" />
                     <input type="submit" asp-action="Delete" asp-controller="Account" class="btn btn-danger" value="Удалить" />
                 </form>
