--- a/src/Views/Home/Index.cshtml
+++ b/src/Views/Home/Index.cshtml
@@ -21,9 +21,9 @@
                         </form>
                         <div>
                             <span class="mr-2">Ведущий преподаватель:</span>
-                            <span class="mr-2">@Html.DisplayFor(modelItem => item.Account.LastName)</span>
-                            <span class="mr-2">@Html.DisplayFor(modelItem => item.Account.Name)</span>
-                            <span>@Html.DisplayFor(modelItem => item.Account.MiddleName)</span>
+                            <span class="mr-2">@Html.DisplayFor(modelItem => item.Teacher.Account.LastName)</span>
+                            <span class="mr-2">@Html.DisplayFor(modelItem => item.Teacher.Account.Name)</span>
+                            <span>@Html.DisplayFor(modelItem => item.Teacher.Account.MiddleName)</span>
                         </div>
                     </div>
                 </div>
