--- a/src/Views/Account/Index.cshtml
+++ b/src/Views/Account/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IS_distance_learning.ViewModels.AccountModel
+﻿@model IS_distance_learning.ViewModels.SelectedAccountsModel
 
 @{
     ViewData["Title"] = "Аккаунты";
@@ -44,24 +44,22 @@
         <th>Редактировать</th>
         <th>Удалить</th>
     </tr>
-    @foreach (Account acc in Model.SelectedAccounts)
+    @foreach (var acc in Model.SelectedAccounts)
     {
         <tr>
             <td>@acc.LastName</td>
             <td>@acc.Name</td>
             <td>@acc.MiddleName</td>
             <td>@acc.Role.Name</td>
-            <td>@acc.Group?.Name</td>
+            <td>@acc.Student?.Group?.Name</td>
             <td>
                 <form method="get">
                     <input name="id" class="hide disabled invisible" type="hidden" value="@acc.Id" />
-                    <input name="roleId" class="hide disabled invisible" type="hidden" value="@acc.Role.Id" />
                     <input type="submit" asp-action="Update" asp-controller="Account" class="btn btn-info" value="Редактировать" />
                 </form>
             </td>
             <td>
                 <form method="post">
-                    <input name="roleId" class="hide disabled invisible" type="hidden" value="@acc.Role.Id" />
                     <input name="id" class="hide disabled invisible" type="hidden" value="@acc.Id" />
                     <input type="submit" asp-action="Delete" asp-controller="Account" class="btn btn-danger" value="Удалить" />
                 </form>
