--- a/src/Views/Course/Create.cshtml
+++ b/src/Views/Course/Create.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input asp-for="AccountId" name="AccountId" value="@User.Claims.ToList()[2].Value" type="hidden" class="form-control" />
+                <input name="AccountId" value="@User.Claims.ToList()[2].Value" type="hidden" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Добавить курс" class="btn btn-primary" />
