--- a/src/Views/Account/Login.cshtml
+++ b/src/Views/Account/Login.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
+        <form asp-action="Login" asp-controller="Account" method="post" asp-anti-forgery="true">
             <div class="validation" asp-validation-summary="ModelOnly"></div>
                 <div class="form-group">
                     <label asp-for="Login" class="control-label">Введите логин</label>
