--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <div class="navbar-nav flex-grow-1 justify-content-between">
                     <span class="nav-item">
-                        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Центр дистанционного обучения</a>
+                        <a class="navbar-brand" asp-controller="Home" asp-action="Index">Центр дистанционного обучения</a>
                     </span>
                     <div class="nav-item d-inline-flex">
                         @{
