--- a/src/Views/Course/Create.cshtml
+++ b/src/Views/Course/Create.cshtml
@@ -18,6 +18,10 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Description" class="control-label">Описание</label>
+                <textarea asp-for="Description" class="description"></textarea>
+            </div>
+            <div class="form-group">
                 <input name="AccountId" value="@User.Claims.ToList()[2].Value" type="hidden" class="form-control" />
             </div>
             <div class="form-group">
