--- a/src/Views/Course/Details.cshtml
+++ b/src/Views/Course/Details.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="d-flex flex-column align-items-center">
-    <div class="d-flex justify-content-between mb-3 course">
+    <div class="d-flex justify-content-between mb-2 course">
         <h4>@Html.DisplayFor(model => model.Name)</h4>
         <div class="align-self-end">
             <span class="mr-2">Ведущий преподаватель:</span>
@@ -14,32 +14,69 @@
             <span>@Html.DisplayFor(model => model.Teacher.Account.MiddleName)</span>
         </div>
     </div>
+    <div class="mb-3">
+        <h4>Описание</h4>
+        <div>@Html.DisplayFor(model => model.Description)</div>
+    </div>
+    @if (User.IsInRole("teacher") || User.IsInRole("admin"))
+    {
+        <table border="1" bordercolor="#dee2e6" class="table">
+            <tr>
+            <tr>
+                <th>Название группы</th>
+                <th>Код группы</th>
+                @if (User.IsInRole("teacher"))
+                {
+                    <th>
+                        <string>Открепить группу</string>
+                    </th>
+                }
+            </tr>
+            @if (User.IsInRole("admin") || User.IsInRole("teacher"))
+            {
+                @foreach (Group g in Model.Groups)
+                {
+                    <tr>
+                        <td>@g.Name</td>
+                        <td>@g.Code</td>
+                        <td>
+                            <form method="get">
+                                <input name="id" class="hide disabled invisible" type="hidden" value="@g.Id" />
+                                <input type="submit" asp-action="Update" asp-controller="Group" class="btn btn-info" value="Редактировать" />
+                            </form>
+                        </td>
+                    </tr>
+                }
+            }
+        </table>
+    }
     <table border="1" bordercolor="#dee2e6" class="table">
         <tr>
         <tr>
-            <th>Название группы</th>
-            <th>Код группы</th>
-            <th>
-                @if (User.IsInRole("teacher"))
-                {
-                    <string>Открепить группу</string>
-                }
-                else
-                {
-                    <string></string>
-                }
-            </th>
+            <th>Название теста</th>
+            <th>Описание</th>
+            <th>Дата начала</th>
+            <th>Дата окончания</th>
+            @if (User.IsInRole("teacher"))
+            {
+                <th>
+                    <string>Удалить тест</string>
+                </th>
+            }
         </tr>
-        @if(User.IsInRole("admin") || User.IsInRole("teacher")) {
-            @foreach (Group g in Model.Groups)
+        @if (User.IsInRole("admin") || User.IsInRole("teacher"))
+        {
+            @foreach (Test t in Model.Tests)
             {
                 <tr>
-                    <td>@g.Name</td>
-                    <td>@g.Code</td>
+                    <td>@t.Name</td>
+                    <td>@t.Description</td>
+                    <td>@t.Date</td>
+                    <td>@t.ExpirationDate</td>
                     <td>
-                        <form method="get">
-                            <input name="id" class="hide disabled invisible" type="hidden" value="@g.Id" />
-                            <input type="submit" asp-action="Update" asp-controller="Group" class="btn btn-info" value="Редактировать" />
+                        <form method="post">
+                            <input name="id" class="hide disabled invisible" type="hidden" value="@t.Id" />
+                            <input type="submit" asp-action="Delete" asp-controller="Test" class="btn btn-info" value="Удалить" />
                         </form>
                     </td>
                 </tr>
