--- a/src/Views/Course/Index.cshtml
+++ b/src/Views/Course/Index.cshtml
@@ -23,14 +23,20 @@
             <th>
                 Ведущий преподаватель
             </th>
+            @if (User.IsInRole("teacher"))
+            {
+                <th>
+                    Редактирование
+                </th>
+                <th>
+                    Прикрепление групп
+                </th>
+                <th>
+                    Удаление групп
+                </th>
+            }
             <th>
-                Редактирование
-            </th>
-            <th>
-                Прикрепление групп
-            </th>
-            <th>
-                Удаление групп
+                Подробнее
             </th>
             <th>
                 Удаление
@@ -51,7 +57,7 @@
                 <td>
                     <form method="get">
                         <input name="id" class="hide disabled invisible" type="hidden" value="@item.Id" />
-                        <input type="submit"  asp-action="Update" asp-route-id="@item.Id" asp-controller="Course" class="btn btn-info" value="Редактировать"/>
+                        <input type="submit" asp-action="Update" asp-route-id="@item.Id" asp-controller="Course" class="btn btn-info" value="Редактировать" />
                     </form>
                 </td>
                 <td>
@@ -68,14 +74,20 @@
                 </td>
             }
             @if (item.Teacher.Account.Login == User.Identity.Name || User.IsInRole("admin"))
-                {
+            {
+                <td>
+                    <form method="get">
+                        <input name="id" class="hide disabled invisible" type="hidden" value="@item.Id" />
+                        <input type="submit" asp-action="Details" asp-controller="Course" class="btn btn-info" value="Подробнее" />
+                    </form>
+                </td>
                 <td>
                     <form method="post">
                         <input name="id" class="hide disabled invisible" type="hidden" value="@item.Id" />
                         <input type="submit" asp-action="Delete" asp-controller="Course" class="btn btn-danger" value="Удалить курс" />
                     </form>
                 </td>
-                }
+            }
         </tr>
 }
     </tbody>
