--- a/src/Views/Course/Update.cshtml
+++ b/src/Views/Course/Update.cshtml
@@ -19,7 +19,11 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input name="AccountId" value="@User.Claims.ToList()[2].Value"  type="hidden" class="form-control" />
+                <label asp-for="Description" class="control-label">Описание</label>
+                <textarea asp-for="Description" class="description"></textarea>
+            </div>
+            <div class="form-group">
+                <input name="AccountId" value="@User.Claims.ToList()[2].Value" type="hidden" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Сохранить" class="btn btn-primary" />
