--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -87,3 +87,10 @@ body {
     -moz-box-shadow: 2px 5px 20px 2px rgba(34, 60, 80, 0.3);
     box-shadow: 2px 5px 20px 2px rgba(34, 60, 80, 0.3);
 }
+
+.description {
+    width: 500px;
+    height: 200px;
+    overflow: hidden;
+    resize: none;
+}
