--- a/src/Views/Course/Details.cshtml
+++ b/src/Views/Course/Details.cshtml
@@ -14,9 +14,18 @@
             <span>@Html.DisplayFor(model => model.Teacher.Account.MiddleName)</span>
         </div>
     </div>
-    <div class="mb-3">
-        <h4>Описание</h4>
-        <div>@Html.DisplayFor(model => model.Description)</div>
+    <div class="d-flex mb-3">
+        <div class="mr-5">
+            <h4>Описание</h4>
+            <div>@Html.DisplayFor(model => model.Description)</div>
+        </div>
+        @if (User.IsInRole("teacher"))
+        {
+    <form method="get">
+        <input name="CourseId" class="hide disabled invisible" type="hidden" value="@Model.CourseId" />
+        <input type="submit" asp-action="Create" asp-controller="Tests" class="btn btn-primary" value="Добавить тест" />
+    </form>
+        }
     </div>
     @if (User.IsInRole("teacher") || User.IsInRole("admin"))
     {
@@ -60,7 +69,13 @@
             @if (User.IsInRole("teacher"))
             {
                 <th>
-                    <string>Удалить тест</string>
+                    Редактировать
+                </th>
+                <th>
+                    Подробнее
+                </th>
+                <th>
+                    Удалить тест
                 </th>
             }
         </tr>
@@ -74,9 +89,21 @@
                     <td>@t.Date</td>
                     <td>@t.ExpirationDate</td>
                     <td>
+                        <form method="get">
+                            <input name="id" class="hide disabled invisible" type="hidden" value="@t.Id" />
+                            <input type="submit" asp-action="Update" asp-controller="Tests" class="btn btn-info" value="Редактировать" />
+                        </form>
+                    </td>
+                    <td>
+                        <form method="get">
+                            <input name="id" class="hide disabled invisible" type="hidden" value="@t.Id" />
+                            <input type="submit" asp-action="Details" asp-controller="Tests" class="btn btn-info" value="Подробнее" />
+                        </form>
+                    </td>
+                    <td>
                         <form method="post">
                             <input name="id" class="hide disabled invisible" type="hidden" value="@t.Id" />
-                            <input type="submit" asp-action="Delete" asp-controller="Test" class="btn btn-info" value="Удалить" />
+                            <input type="submit" asp-action="Delete" asp-controller="Tests" class="btn btn-danger" value="Удалить" />
                         </form>
                     </td>
                 </tr>
