--- a/src/Views/Tests/Create.cshtml
+++ b/src/Views/Tests/Create.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IS_distance_learning.Models.Test
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Создание теста";
 }
 
-<h1>Create</h1>
+<h1>Создание теста</h1>
 
-<h4>Test</h4>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -33,18 +33,13 @@
                 <span asp-validation-for="ExpirationDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CourseId" class="control-label"></label>
-                <select asp-for="CourseId" class ="form-control" asp-items="ViewBag.CourseId"></select>
+                <input asp-for="CourseId" class="form-control" hidden value="@ViewBag.CourseId" />
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Добавить" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
