added answers views

--- a/src/Views/Answers/Update.cshtml
+++ b/src/Views/Answers/Update.cshtml
@@ -1,22 +1,26 @@
-﻿@model IS_distance_learning.Models.Question
+﻿@model IS_distance_learning.Models.Answer
 
 @{
     ViewData["Title"] = "Редактирование";
 }
 
-<h1>Редактирование вопроса</h1>
+<h1>Редактирование ответа</h1>
 
 <hr />
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Update">
+        <form method="post" asp-action="Update">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" value="@Model.Id" />
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Text" class="control-label">Название вопроса</label>
+                <label asp-for="Text" class="control-label">Введите ответ</label>
                 <input asp-for="Text" class="form-control" />
                 <span asp-validation-for="Text" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="IsRight" class="control-label">Правильный ответ</label>
+                <input asp-for="IsRight" type="checkbox" class="form-check" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Сохранить" class="btn btn-primary" />
