--- a/src/Views/Answers/Create.cshtml
+++ b/src/Views/Answers/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model IS_distance_learning.Models.Question
+﻿@model IS_distance_learning.Models.Answer
 
 @{
-    ViewData["Title"] = "Создание вопроса";
+    ViewData["Title"] = "Создание ответа";
 }
 
-<h1>Добавление нового вопроса</h1>
+<h1>Ответ на вопрос</h1>
 
 <hr />
 
@@ -13,12 +13,16 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Text" class="control-label">Введите вопрос</label>
+                <label asp-for="Text" class="control-label">Введите ответ</label>
                 <input asp-for="Text" class="form-control" />
                 <span asp-validation-for="Text" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input asp-for="TestId" class="form-control" hidden value="@ViewBag.TestId" />
+                <label asp-for="IsRight" class="control-label">Правильный ответ</label>
+                <input asp-for="IsRight" type="checkbox" class="form-check" />
+            </div>
+            <div class="form-group">
+                <input asp-for="QuestionId" class="form-control" hidden value="@ViewBag.QuestionId" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Добавить" class="btn btn-primary" />
