--- a/src/Views/Tests/Details.cshtml
+++ b/src/Views/Tests/Details.cshtml
@@ -28,21 +28,27 @@
         </tr>
             @foreach (Question q in Model.Questions)
             {
-                <tr>
-                    <td>@q.Text</td>
-                    <td>
-                        <form method="get">
-                            <input name="id" class="hide disabled invisible" type="hidden" value="@q.Id" />
-                            <input type="submit" asp-action="Update" asp-controller="Questions" class="btn btn-info" value="Редактировать" />
-                        </form>
-                    </td>
-                    <td>
-                        <form method="post">
-                            <input name="id" class="hide disabled invisible" type="hidden" value="@q.Id" />
-                            <input type="submit" asp-action="Delete" asp-controller="Questions" class="btn btn-danger" value="Удалить" />
-                        </form>
-                    </td>
-                </tr>
+    <tr>
+        <td>@q.Text</td>
+        <td>
+            <form method="get">
+                <input name="id" class="hide disabled invisible" type="hidden" value="@q.Id" />
+                <input type="submit" asp-action="Update" asp-controller="Questions" class="btn btn-info" value="Редактировать" />
+            </form>
+        </td>
+        <td>
+            <form method="get">
+                <input name="id" class="hide disabled invisible" type="hidden" value="@q.Id" />
+                <input type="submit" asp-action="Details" asp-controller="Questions" class="btn btn-info" value="Подробнее" />
+            </form>
+        </td>
+        <td>
+            <form method="post">
+                <input name="id" class="hide disabled invisible" type="hidden" value="@q.Id" />
+                <input type="submit" asp-action="Delete" asp-controller="Questions" class="btn btn-danger" value="Удалить" />
+            </form>
+        </td>
+    </tr>
             }
     </table>
 </div>
