--- a/src/Views/Answers/Index.cshtml
+++ b/src/Views/Answers/Index.cshtml
@@ -34,18 +34,16 @@
 <table border="1" bordercolor="#dee2e6" class="table">
     <tr>
         <th>Название теста</th>
-        <th>Описание</th>
-        <th>Дата начала</th>
         <th>Дата окончания</th>
-        <th>Кол-во правильных ответов</th>
+        <th>ФИО студента</th>
+        <th>Правильных ответов</th>
     </tr>
-    @foreach (Attempt a in Model.SelectedAttempts)
+    @foreach (Attempt a in Model)
     {
         <tr>
             <td>@a.Test.Name</td>
-            <td>@a.Test.Description</td>
-            <td>@a.Test.Date</td>
             <td>@a.Test.ExpirationDate</td>
+            <td>@a.Student.Account.LastName @a.Student.Account.Name @a.Student.Account.MiddleName</td>
             <td>@a.Mark из @a.Test.Questions.Count</td>
         </tr>
     }
